css/main.css
@import url('https://fonts.googleapis.com/css?family=Roboto:300,400');


/* Standard Styling */
body {
    font-family: 'Roboto', sans-serif;
    font-weight: light;
}

a, a:link, a:active {
    color: #666;
    text-decoration: none;
}

a:hover {
   transition:color .5s ease-in;
   border-bottom: 1px solid #444;
   margin-bottom:-1px;
   color: #fff;
    text-decoration: none;

}
.list-inline {
    text-align: center
}

/* Bootstrap Overrides */
.row {
    padding: 20px;
}

.lead {
    display: inline-block;
    vertical-align: middle;
    min-height: 80%;
    padding: 20px;
    margin-top: 10px;
    font-size: 90%;
}

/* Navigation */
.navbar {
    background-color:#111;  
}

.navbar a {
    color: #cacaca;  
    text-transform: uppercase;
    letter-spacing: 2px;
    font-size: 70%;
}
.navbar a:hover {
    color: #02acae;
}

.navbar-nav {
    flex-direction: row;
}

.nav-link {
    margin: 5px;

}

.left-nav {
    margin: 10px;
}

.left-nav a {
    text-decoration: none;
}

@media only screen and (max-width: 320px) {
    .navbar {
        font-size: 60%;
    }
}


/* Header Img with text overlay */
.one {
    background-image: url(../img/code.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    height: 100vh;
    background-position: center center; 

  }

  .one .col {
    position: absolute;
    background: rgba(0, 0, 0, 0.5);
    /* Black background with 0.5 opacity */
    height: 100vh;
    margin-left: -20px;
    margin-top: -20px;
  }

.one h1 {
    font-family: 'Roboto', sans-serif;
    font-weight: 300;
    margin: auto;
    text-align: center;
    position: relative;
    top: 50%;
    margin-top: -57px;
    color: #fff;
    /* text-shadow: 12px 01px 11px #000; */
}

/* User Info with User Image */
.two {
    background: #e1dcd8;
    text-align: left;
    vertical-align: middle;
    padding: 50px;
}

.two img {
    max-width: 150px;
    border-radius: 75px;
    text-align: center;
    padding: 5%;
}


@media only screen and (min-width: 768px) {
    .two .lead {
        background-color: #a7136c;
        color: #eee;
        font-size: 100%;
    }
}

@media only screen and (min-width: 50px) and (max-width: 768px) {
    .usr-img {
        display: block;
        margin: auto;
        margin-bottom: 20px;
    }
    .two .lead {
        background:#a7136c;
        padding: 30px;
        color: #eee;
        font-size: 100%;
    }
}


/* Language Icons */
.languages-cont {
    background-color: #02acae;    
    font-size: 180%;
    display: inline-block;
    display: flex;
    align-items: center;
    justify-content: center;
}

.languages ul {
    color: #222;
    text-align: center;
}


/*  PROJECTS */

.three {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 20px;
}

.three .title {
       text-align: right;
    font-size: 200%; 
}

.three img {
    max-width: 0%;
    margin-bottom: 20px;
    /* padding: 20px; */
}

/* For Breakdown of Project Images */
@media only screen and (max-width:768px) {
   .three img {
    /* max-width: 10%; */
    margin-bottom: 20px;
    padding: 20px;

    }
}

/* Gallery Images */
.gallery-container {
    position: relative;
    width: 100%;
}

.image {
    opacity: 1;
    display: inline-block;
    min-width: 80%;
    vertical-align: middle;
    height: auto;
    transition: .5s ease;
    backface-visibility: hidden;
}

.middle {
    transition: .5s ease;
    opacity: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    text-align: center;
}

.gallery-container:hover .image {
    opacity: 0.3;
}

.gallery-container:hover .middle {
    opacity: 1;
}

.text {
    background-color: #02acae;
    color: white;
    font-size: 13px;
    padding: 16px 32px;
}

.text a {
    color: #111;
    font-size: 50px;
    border: 0px;
}

.text a:hover {
    color: white;
}

/* Work History */
.work-history {
    background-color: #f4f4f4;
    height: 50vh;

}

.title {
    text-align: right;
    font-size: 200%;
    border-bottom: 0.5px solid #222;
    font-weight: 300;

}

/* Footer */
.footer {
    background: #111;
    color: #999;
    padding: 30px;
    font-size: 13px;
    text-transform: uppercase;
}

.footer ul,li {
    display: inline;
    margin: 10px;
}

